Fix research log hero/lead alignment with Weeks by zeroing hero padding

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -386,7 +386,9 @@ code {
 
 .research-log-page .hero {
   text-align: left;
-  margin-left: 0;
+  margin: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .research-log-page .hero::before {
@@ -396,6 +398,7 @@ code {
 .research-log-page .lead {
   text-align: left;
   margin-left: 0;
+  padding-left: 0;
 }
 
 .research-log-index-heading {
